@@ -43,6 +43,12 @@ RELEASE 0.XX - XXX
   - Add a Progress() function that allows for calling a function or string
     (or list of strings) to display progress while walking the DAG.
 
+  From Sohail Somani:
+
+  - When Cloning a construction environment, set any variables before
+    applying tools (so the tool module can access the configured settings)
+    and re-set them after (so they end up matching what the user set).
+
   From Matthias Troffaes:
 
   - Make sure extra auxiliary files generated by some LaTeX packages
